Ensure lists are aligned with the other elements

--- a/_assets/styles/_element.scss
+++ b/_assets/styles/_element.scss
@@ -27,6 +27,11 @@
   margin-top: 20px;
 }
 
+.meta-list {
+  margin: 0 0 16px 16px;
+  padding: 8px 0;
+}
+
 .ref-org,
 .ref-date,
 .ref-version {
